add working rnn

--- a/RNN Test.ipynb
+++ b/RNN Test.ipynb
@@ -2,44 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-26T08:06:54.543206Z",
-     "start_time": "2024-04-26T08:06:54.303290Z"
+     "end_time": "2024-04-26T12:17:38.120169Z",
+     "start_time": "2024-04-26T12:17:38.116286Z"
     }
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 0.0194\n",
-      "Epoch [2/10], Loss: 0.0188\n",
-      "Epoch [3/10], Loss: 0.0174\n",
-      "Epoch [4/10], Loss: 0.0147\n",
-      "Epoch [5/10], Loss: 0.0162\n",
-      "Epoch [6/10], Loss: 0.0214\n",
-      "Epoch [7/10], Loss: 0.0121\n",
-      "Epoch [8/10], Loss: 0.0092\n",
-      "Epoch [9/10], Loss: 0.0056\n",
-      "Epoch [10/10], Loss: 0.0051\n",
-      "Predicted: tensor(0.4618) | Actual: 0.4205989400187014\n",
-      "Predicted: tensor(-0.8352) | Actual: -0.9010361530385885\n",
-      "Predicted: tensor(0.0260) | Actual: 0.032094637224355876\n",
-      "Predicted: tensor(-0.1932) | Actual: -0.16060901905133262\n",
-      "Predicted: tensor(0.8885) | Actual: 0.9038436133178186\n",
-      "Predicted: tensor(-0.2358) | Actual: -0.1990754078720623\n",
-      "Predicted: tensor(-0.8549) | Actual: -0.9555279164689037\n",
-      "Predicted: tensor(0.4266) | Actual: 0.38746159232629784\n",
-      "Predicted: tensor(0.8334) | Actual: 0.8249887103636494\n",
-      "Predicted: tensor(0.2861) | Actual: 0.25955816131390486\n"
+      "(1076, 10)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import src.rnn\n",
+    "import importlib\n",
+    "importlib.reload(src.rnn)\n",
+    "src.rnn.get_google_stock_data(\"2020-01-01\", \"2024-04-25\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-26T13:56:01.641026Z",
+     "start_time": "2024-04-26T13:56:01.582942Z"
+    }
+   },
+   "id": "60658f42eb1aaa5a"
   },
   {
    "cell_type": "code",
@@ -49,7 +63,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "60658f42eb1aaa5a"
+   "id": "eda8c1acd465088d"
   }
  ],
  "metadata": {
