--- a/grid.ipynb
+++ b/grid.ipynb
@@ -43240,7 +43240,7 @@
     "            plt.text(j, i, f'{array_values[i, j]:.2f}', ha='center', va='center', color='white')\n",
     "\n",
     "\n",
-    "\n",
+    "plt.figure(figsize=(15,15))\n",
     "plt.colorbar()\n",
     "plt.title('Grid')\n",
     "plt.xlabel('Past frames')\n",
